--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -8,6 +8,10 @@
     cursor: pointer;
 }
 
+.dp{
+  display:inline;
+}
+
 /* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus {
     background-color: #2980B9;
